--- a/BYOB/Home/TableViewCell/CategorizedExpenceCell.xib
+++ b/BYOB/Home/TableViewCell/CategorizedExpenceCell.xib
@@ -17,15 +17,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="159" id="KGk-i7-Jjw" customClass="CategorizedExpenceCell" customModule="BYOB" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategorizedExpenceCell" id="KGk-i7-Jjw" customClass="CategorizedExpenceCell" customModule="BYOB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="159"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="159"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7XZ-5a-TZj">
-                        <rect key="frame" x="10" y="10" width="300" height="139"/>
+                        <rect key="frame" x="10" y="10" width="300" height="140"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nZ1-JJ-VmP">
                                 <rect key="frame" x="5" y="5" width="50" height="50"/>
@@ -41,7 +41,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zfg-oi-MPu">
-                                <rect key="frame" x="5" y="84" width="50" height="50"/>
+                                <rect key="frame" x="5" y="85" width="50" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="03" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1YA-sO-8yb">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="35"/>
@@ -58,14 +58,24 @@
                                         <color key="textColor" white="1" alpha="0.63626391267123283" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jQp-Dv-Hhv">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <connections>
+                                            <action selector="viewTrasactionButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Re5-MH-BUT"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.31512200342465752" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="1YA-sO-8yb" firstAttribute="top" secondItem="Zfg-oi-MPu" secondAttribute="top" id="1tw-nI-c1U"/>
+                                    <constraint firstAttribute="trailing" secondItem="jQp-Dv-Hhv" secondAttribute="trailing" id="6QA-yC-L8o"/>
                                     <constraint firstAttribute="height" constant="50" id="Dun-eR-Adf"/>
+                                    <constraint firstItem="jQp-Dv-Hhv" firstAttribute="leading" secondItem="Zfg-oi-MPu" secondAttribute="leading" id="FXi-LU-gtj"/>
                                     <constraint firstAttribute="trailing" secondItem="1YA-sO-8yb" secondAttribute="trailing" id="Fnx-05-0dF"/>
+                                    <constraint firstItem="jQp-Dv-Hhv" firstAttribute="top" secondItem="Zfg-oi-MPu" secondAttribute="top" id="LRJ-5i-w4R"/>
                                     <constraint firstAttribute="trailing" secondItem="Zjk-rk-3am" secondAttribute="trailing" id="Q2l-Gh-iSX"/>
                                     <constraint firstItem="1YA-sO-8yb" firstAttribute="leading" secondItem="Zfg-oi-MPu" secondAttribute="leading" id="UW0-I5-B7W"/>
+                                    <constraint firstAttribute="bottom" secondItem="jQp-Dv-Hhv" secondAttribute="bottom" id="UnT-Eh-EmR"/>
                                     <constraint firstAttribute="bottom" secondItem="Zjk-rk-3am" secondAttribute="bottom" id="WqR-Pd-Zxj"/>
                                     <constraint firstAttribute="bottom" secondItem="1YA-sO-8yb" secondAttribute="bottom" constant="15" id="Xki-rE-45N"/>
                                     <constraint firstAttribute="width" secondItem="Zfg-oi-MPu" secondAttribute="height" multiplier="1:1" id="e4a-jl-kGl"/>
@@ -73,7 +83,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rs." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcl-HJ-BIm">
-                                <rect key="frame" x="70" y="84" width="22.5" height="50"/>
+                                <rect key="frame" x="70" y="85" width="22.5" height="50"/>
                                 <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -85,6 +95,7 @@
                             <constraint firstItem="zcl-HJ-BIm" firstAttribute="leading" secondItem="Zfg-oi-MPu" secondAttribute="trailing" constant="15" id="EGO-sX-zUw"/>
                             <constraint firstItem="8B1-ZO-3vT" firstAttribute="leading" secondItem="nZ1-JJ-VmP" secondAttribute="trailing" constant="20" id="G0f-P4-Nu7"/>
                             <constraint firstAttribute="bottom" secondItem="Zfg-oi-MPu" secondAttribute="bottom" constant="5" id="NOh-YU-3Rl"/>
+                            <constraint firstAttribute="height" constant="140" id="Ndy-W2-U1Z"/>
                             <constraint firstItem="nZ1-JJ-VmP" firstAttribute="leading" secondItem="7XZ-5a-TZj" secondAttribute="leading" constant="5" id="RMj-Qc-tQt"/>
                             <constraint firstItem="zcl-HJ-BIm" firstAttribute="centerY" secondItem="Zfg-oi-MPu" secondAttribute="centerY" id="UFG-17-WdD"/>
                             <constraint firstItem="nZ1-JJ-VmP" firstAttribute="top" secondItem="7XZ-5a-TZj" secondAttribute="top" constant="5" id="j55-Kr-ECq"/>
@@ -113,6 +124,13 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="categoryImageView" destination="nZ1-JJ-VmP" id="B06-54-Ik7"/>
+                <outlet property="nameLabel" destination="8B1-ZO-3vT" id="scw-f7-VKL"/>
+                <outlet property="totalAmountLabel" destination="zcl-HJ-BIm" id="4eH-Nh-XyJ"/>
+                <outlet property="trasactionCountLabel" destination="1YA-sO-8yb" id="pCK-pS-Mt1"/>
+                <outlet property="viewTrasactionButton" destination="jQp-Dv-Hhv" id="b4e-1Y-PAu"/>
+            </connections>
             <point key="canvasLocation" x="112" y="132"/>
         </tableViewCell>
     </objects>
