--- a/BYOB/Payment/CollectionViewCell/CategoryCollectionViewCell.xib
+++ b/BYOB/Payment/CollectionViewCell/CategoryCollectionViewCell.xib
@@ -34,7 +34,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.79819492012465743" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="mbO-cf-NdL" secondAttribute="height" multiplier="1:1" id="3Xu-0S-LLp"/>
                             <constraint firstAttribute="bottom" secondItem="zML-gW-PaF" secondAttribute="bottom" id="5NS-ga-vO4"/>
