--- a/BYOB/Payment/Storyboard/Payment.storyboard
+++ b/BYOB/Payment/Storyboard/Payment.storyboard
@@ -90,6 +90,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="630"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ae0-9H-f4K">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="630"/>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cross" translatesAutoresizingMaskIntoConstraints="NO" id="6CP-40-MYR">
                                 <rect key="frame" x="260" y="10" width="40" height="40"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -129,7 +132,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xj8-B0-rFA">
-                                <rect key="frame" x="0.0" y="85" width="320" height="545"/>
+                                <rect key="frame" x="0.0" y="65" width="320" height="565"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title*" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="heA-ym-FyV">
                                         <rect key="frame" x="20" y="20" width="70" height="30"/>
@@ -217,12 +220,12 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="W6b-dj-l5f">
-                                        <rect key="frame" x="20" y="390" width="280" height="70"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <rect key="frame" x="20" y="390" width="280" height="100"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="70" id="bDi-b1-YY0"/>
+                                            <constraint firstAttribute="height" constant="100" id="bDi-b1-YY0"/>
                                         </constraints>
-                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="t0l-FD-Tlt">
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="t0l-FD-Tlt">
                                             <size key="itemSize" width="70" height="65"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -235,11 +238,10 @@
                                         </connections>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2V8-w3-DTV">
-                                        <rect key="frame" x="80" y="500" width="160" height="40"/>
+                                        <rect key="frame" x="20" y="530" width="280" height="50"/>
                                         <color key="backgroundColor" red="0.20392156859999999" green="0.2784313725" blue="0.33725490200000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="160" id="dcG-dN-Tmg"/>
-                                            <constraint firstAttribute="height" constant="40" id="zcw-m4-GSx"/>
+                                            <constraint firstAttribute="height" constant="50" id="zcw-m4-GSx"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="18"/>
                                         <state key="normal" title="Add Expense">
@@ -247,7 +249,7 @@
                                         </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="20"/>
+                                                <real key="value" value="25"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
@@ -261,6 +263,7 @@
                                     <constraint firstItem="MXR-OV-VeL" firstAttribute="top" secondItem="heA-ym-FyV" secondAttribute="bottom" constant="10" id="4N6-H5-eGc"/>
                                     <constraint firstItem="748-Z6-Neb" firstAttribute="top" secondItem="MXR-OV-VeL" secondAttribute="bottom" constant="20" id="5SA-iy-Y6t"/>
                                     <constraint firstItem="6dk-85-PE5" firstAttribute="top" secondItem="rZ4-sn-tN7" secondAttribute="bottom" constant="20" id="5Ws-1I-xia"/>
+                                    <constraint firstItem="2V8-w3-DTV" firstAttribute="leading" secondItem="xj8-B0-rFA" secondAttribute="leading" constant="20" id="74N-Ie-zCP"/>
                                     <constraint firstItem="6dk-85-PE5" firstAttribute="leading" secondItem="rZ4-sn-tN7" secondAttribute="leading" id="CIV-hf-Gvx"/>
                                     <constraint firstItem="2V8-w3-DTV" firstAttribute="top" secondItem="W6b-dj-l5f" secondAttribute="bottom" constant="40" id="FCO-ca-6Tc"/>
                                     <constraint firstItem="VFR-nx-7DF" firstAttribute="top" secondItem="s9U-mj-bqA" secondAttribute="bottom" constant="20" id="Hae-84-VOb"/>
@@ -278,6 +281,7 @@
                                     <constraint firstItem="MXR-OV-VeL" firstAttribute="leading" secondItem="xj8-B0-rFA" secondAttribute="leading" constant="20" id="QZ4-qI-mmm"/>
                                     <constraint firstItem="rZ4-sn-tN7" firstAttribute="top" secondItem="748-Z6-Neb" secondAttribute="bottom" constant="10" id="cNh-Ea-nxc"/>
                                     <constraint firstItem="MXR-OV-VeL" firstAttribute="centerX" secondItem="xj8-B0-rFA" secondAttribute="centerX" id="eaW-x8-g9b"/>
+                                    <constraint firstAttribute="trailing" secondItem="2V8-w3-DTV" secondAttribute="trailing" constant="20" id="krb-is-DBc"/>
                                     <constraint firstItem="W6b-dj-l5f" firstAttribute="leading" secondItem="VFR-nx-7DF" secondAttribute="leading" id="ogq-N0-342"/>
                                     <constraint firstAttribute="bottom" secondItem="2V8-w3-DTV" secondAttribute="bottom" constant="30" id="tcV-7x-jzm"/>
                                 </constraints>
@@ -285,16 +289,20 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstAttribute="bottomMargin" secondItem="Ae0-9H-f4K" secondAttribute="bottom" id="ArJ-c4-EnS"/>
+                            <constraint firstItem="Ae0-9H-f4K" firstAttribute="leading" secondItem="odR-IQ-UxX" secondAttribute="leading" id="Gnx-UE-7LR"/>
                             <constraint firstItem="odR-IQ-UxX" firstAttribute="trailing" secondItem="6CP-40-MYR" secondAttribute="trailing" constant="20" id="P1F-bN-Hl7"/>
                             <constraint firstItem="xj8-B0-rFA" firstAttribute="trailing" secondItem="odR-IQ-UxX" secondAttribute="trailing" id="Sxb-dM-wC9"/>
+                            <constraint firstItem="Ae0-9H-f4K" firstAttribute="top" secondItem="eN6-fk-Hjc" secondAttribute="topMargin" id="VMt-iF-mKZ"/>
                             <constraint firstItem="E1M-7j-Q5u" firstAttribute="centerY" secondItem="foe-6u-apN" secondAttribute="centerY" id="X8p-as-koV"/>
                             <constraint firstItem="foe-6u-apN" firstAttribute="top" secondItem="odR-IQ-UxX" secondAttribute="top" constant="5" id="XOx-50-Uca"/>
                             <constraint firstItem="odR-IQ-UxX" firstAttribute="bottom" secondItem="xj8-B0-rFA" secondAttribute="bottom" id="al6-2c-LUb"/>
                             <constraint firstItem="odR-IQ-UxX" firstAttribute="trailing" secondItem="E1M-7j-Q5u" secondAttribute="trailing" constant="20" id="bI4-Yw-W5A"/>
+                            <constraint firstItem="odR-IQ-UxX" firstAttribute="trailing" secondItem="Ae0-9H-f4K" secondAttribute="trailing" id="gCL-lh-h0Z"/>
                             <constraint firstItem="6CP-40-MYR" firstAttribute="centerY" secondItem="foe-6u-apN" secondAttribute="centerY" id="mvT-DZ-GrW"/>
                             <constraint firstItem="foe-6u-apN" firstAttribute="centerX" secondItem="odR-IQ-UxX" secondAttribute="centerX" id="om0-XL-60H"/>
                             <constraint firstItem="xj8-B0-rFA" firstAttribute="leading" secondItem="odR-IQ-UxX" secondAttribute="leading" id="pfn-2w-xNe"/>
-                            <constraint firstItem="xj8-B0-rFA" firstAttribute="top" secondItem="foe-6u-apN" secondAttribute="bottom" constant="30" id="rah-fl-tTQ"/>
+                            <constraint firstItem="xj8-B0-rFA" firstAttribute="top" secondItem="foe-6u-apN" secondAttribute="bottom" constant="10" id="rah-fl-tTQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="odR-IQ-UxX"/>
                     </view>
