--- a/BYOB/Payment/CollectionViewCell/CategoryCollectionViewCell.xib
+++ b/BYOB/Payment/CollectionViewCell/CategoryCollectionViewCell.xib
@@ -7,45 +7,56 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Montserrat-Medium.otf">
-            <string>Montserrat-Medium</string>
+        <array key="Montserrat-Regular.otf">
+            <string>Montserrat-Regular</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCollectionViewCell" id="gTV-IL-0wX" customClass="CategoryCollectionViewCell" customModule="BYOB" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="129" height="114"/>
+            <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="129" height="114"/>
+                <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mbO-cf-NdL">
-                        <rect key="frame" x="14.5" y="7" width="100" height="100"/>
+                        <rect key="frame" x="5" y="5" width="70" height="90"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ebw-Af-7DS">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="85"/>
+                                <rect key="frame" x="0.0" y="0.0" width="70" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="zAr-GY-yVZ"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zML-gW-PaF">
-                                <rect key="frame" x="0.0" y="86" width="100" height="14"/>
-                                <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="14"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="gh" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zML-gW-PaF">
+                                <rect key="frame" x="0.0" y="61" width="70" height="29"/>
+                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="selected" translatesAutoresizingMaskIntoConstraints="NO" id="7Ca-Qr-dao">
+                                <rect key="frame" x="0.0" y="22.5" width="70" height="45"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.79819492012465743" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="mbO-cf-NdL" secondAttribute="height" multiplier="1:1" id="3Xu-0S-LLp"/>
                             <constraint firstAttribute="bottom" secondItem="zML-gW-PaF" secondAttribute="bottom" id="5NS-ga-vO4"/>
-                            <constraint firstItem="zML-gW-PaF" firstAttribute="leading" secondItem="Ebw-Af-7DS" secondAttribute="leading" id="QRQ-Au-RQ7"/>
+                            <constraint firstAttribute="height" constant="90" id="9cG-hT-SjN"/>
+                            <constraint firstAttribute="width" constant="70" id="Aye-JS-ebJ"/>
+                            <constraint firstItem="7Ca-Qr-dao" firstAttribute="centerX" secondItem="mbO-cf-NdL" secondAttribute="centerX" id="LHA-3k-Y4t"/>
                             <constraint firstAttribute="trailing" secondItem="Ebw-Af-7DS" secondAttribute="trailing" id="Rls-d8-Nbu"/>
-                            <constraint firstAttribute="width" constant="100" id="WUh-tU-89H"/>
                             <constraint firstItem="Ebw-Af-7DS" firstAttribute="leading" secondItem="mbO-cf-NdL" secondAttribute="leading" id="d4B-Ky-ggR"/>
-                            <constraint firstAttribute="bottom" secondItem="Ebw-Af-7DS" secondAttribute="bottom" constant="15" id="m3D-kD-KgV"/>
+                            <constraint firstItem="7Ca-Qr-dao" firstAttribute="height" secondItem="mbO-cf-NdL" secondAttribute="height" multiplier="0.5" id="gNl-HI-Oe5"/>
+                            <constraint firstItem="7Ca-Qr-dao" firstAttribute="leading" secondItem="Ebw-Af-7DS" secondAttribute="leading" id="hWm-bg-yKk"/>
+                            <constraint firstItem="7Ca-Qr-dao" firstAttribute="trailing" secondItem="Ebw-Af-7DS" secondAttribute="trailing" id="lA1-a7-J45"/>
                             <constraint firstItem="zML-gW-PaF" firstAttribute="top" secondItem="Ebw-Af-7DS" secondAttribute="bottom" constant="1" id="m4e-WA-dFD"/>
-                            <constraint firstItem="zML-gW-PaF" firstAttribute="trailing" secondItem="Ebw-Af-7DS" secondAttribute="trailing" id="s1d-9h-Fsp"/>
+                            <constraint firstItem="7Ca-Qr-dao" firstAttribute="centerY" secondItem="mbO-cf-NdL" secondAttribute="centerY" id="qU3-hT-VSh"/>
                             <constraint firstItem="Ebw-Af-7DS" firstAttribute="top" secondItem="mbO-cf-NdL" secondAttribute="top" id="sP9-5T-Ij1"/>
+                            <constraint firstItem="zML-gW-PaF" firstAttribute="leading" secondItem="mbO-cf-NdL" secondAttribute="leading" id="xQv-tr-M51"/>
+                            <constraint firstAttribute="trailing" secondItem="zML-gW-PaF" secondAttribute="trailing" id="xdj-Jr-PDM"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -56,16 +67,22 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="mbO-cf-NdL" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="24d-ig-P97"/>
-                <constraint firstItem="mbO-cf-NdL" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="gS1-KE-4IJ"/>
+                <constraint firstAttribute="bottom" secondItem="mbO-cf-NdL" secondAttribute="bottom" constant="5" id="IZd-Tk-9Pg"/>
+                <constraint firstItem="mbO-cf-NdL" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="TOd-Te-ApP"/>
+                <constraint firstItem="mbO-cf-NdL" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="uj1-S8-dJU"/>
+                <constraint firstItem="mbO-cf-NdL" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="xYG-JV-Ozi"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="129" height="114"/>
             <connections>
                 <outlet property="categoryImageView" destination="Ebw-Af-7DS" id="AiO-Ap-keQ"/>
                 <outlet property="categoryLabel" destination="zML-gW-PaF" id="PR6-mv-UXX"/>
+                <outlet property="selectedImageView" destination="7Ca-Qr-dao" id="oDc-O0-I3q"/>
             </connections>
             <point key="canvasLocation" x="189.13043478260872" y="134.59821428571428"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="selected" width="512" height="512"/>
+    </resources>
 </document>
